<resources>
    <string name="app_name">Examine</string>
    <string name="cvs">cardiovascular system</string>
    <string name="respi">respiratory system</string>
    <string name="abd">abdomen</string>
    <string name="cns">cranial nerves</string>
    <string name="pns">peripheral nerves</string>
    <string name="ul">upper limb</string>
    <string name="ll">lower limb</string>
    <string name="neonate">neonatal examination</string>
    <string name="obs">obstetrics examination</string>
    <string name="pv">per vaginal examination</string>
    <string name="pr">per rectal examination</string>
    <string name="thyroid">neck lump</string>
    <string name="hernia">lump at hernial orifice</string>
    <string name="lump">lump</string>
    <string name="breast">breast</string>
    <string name="knee">knee joint examination</string>
    <string name="about">Feedback and about</string>
    <string name="gibirish_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla, quam ac interdum consequat, erat libero scelerisque magna, semper iaculis tortor neque non mauris. Ut convallis interdum nisl vel placerat. Suspendisse a ligula accumsan, sagittis nunc eu, sodales quam. Vestibulum convallis augue et mauris elementum, feugiat bibendum ex fermentum. Proin efficitur dui quis ornare euismod. In quam metus, luctus non tincidunt in, tincidunt ut augue. Vivamus tellus enim, lobortis eget mauris a, facilisis ornare leo. Morbi augue diam, viverra lacinia velit sit amet, finibus tincidunt metus. Phasellus vitae semper elit. Quisque maximus erat diam, sit amet varius lectus faucibus et.
    Aenean porta aliquam odio sed facilisis. Maecenas semper mauris ac risus tempus euismod. Donec consectetur dolor vitae molestie egestas. Mauris elit libero, finibus vehicula accumsan ut, convallis vel magna. Integer iaculis metus at ipsum convallis rutrum. Sed sit amet fermentum mi, sit amet facilisis ante. Pellentesque eros nibh, pretium vel arcu id, sodales venenatis sapien. Nam quis quam quis risus pretium euismod nec non odio. In mauris ante, aliquet sed lacus id, fermentum consectetur dui.
    Nunc quis ullamcorper mi. Donec tempus arcu nec massa ultricies, at mattis nisi maximus. Praesent at dictum quam. Aenean suscipit justo ac commodo blandit. Pellentesque a tellus risus. Ut nec egestas nulla, eget pulvinar ex. Pellentesque eget aliquam urna. Pellentesque fermentum, augue quis commodo fermentum, libero purus facilisis metus, in egestas dui turpis in libero. Sed in dignissim nibh. Praesent vel sem dapibus, vulputate eros a, porta erat. Curabitur luctus varius dui eget sagittis. Phasellus egestas viverra elit sed porta. Aliquam eget lacinia sapien. Pellentesque sapien magna, facilisis facilisis ligula sed, vestibulum eleifend erat. Maecenas egestas sit amet purus vel sollicitudin. Mauris dapibus ipsum id tellus cursus, vitae posuere neque congue.
    Vivamus semper velit nec arcu rutrum, ut tincidunt neque vestibulum. Maecenas porta diam ut nulla consectetur congue. Curabitur leo ipsum, mattis tincidunt facilisis non, malesuada sed lorem. Praesent quis commodo odio, vel maximus eros. Curabitur dui sapien, aliquam in dapibus ut, ullamcorper a quam. Fusce ullamcorper, lorem vel tristique auctor, metus diam rutrum diam, et egestas lacus lectus in dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec tempor mi ut massa dapibus, eu elementum velit pretium. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla ut justo lectus. Sed ullamcorper sed felis vitae gravida. Sed laoreet eros non nisi condimentum viverra. Proin quis blandit leo. Nunc cursus faucibus ex. Duis posuere facilisis porta.
    Fusce laoreet molestie metus, ac congue enim viverra ac. Curabitur sed lobortis sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean at laoreet orci. Nulla interdum orci erat, at ultricies purus maximus ornare. Maecenas luctus massa lorem, eu ornare leo auctor vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas augue dolor, dictum a sapien in, tempus suscipit nunc. Donec purus tortor, commodo in iaculis et, volutpat ac libero. Donec pretium cursus enim. Pellentesque volutpat metus cursus dolor suscipit hendrerit. Vestibulum eros felis, dignissim sit amet leo blandit, dictum suscipit nisi. Aliquam erat volutpat.</string>

    <string name="abourus">EULA agreements are typically presented to users for acceptance during the installation or set-up stage of the software. A pop-up window that prompts a user to check a box that shows they accept the terms before continuing is a very common and effective way of obtaining acceptance for legal terms. The terms of an EULA define the scope of how the software can be used, and any rights the buyer of the software application may have. Liability of limitation clauses can also be included, to disclose that if the software app damages the equipment or any data of the user, the licensor or provider of the software cannot be held liable for the damages. An EULA is important for software developers because when someone installs, downloads, or uses a copy of your software application on their computer or mobile device, they are, in essence, making a copy of the copyrighted software. This legal agreement will dictate limits and liabilities that come along with personally using this copyrighted software. If you’re looking for the template, download it now. EULA vs. Terms and Conditions Generally speaking, a Terms and Conditions agreement cover far more topics and are much broader in scope. The End-User License agreement, however, gives users the right to use the software and only covers issues that address the licensing of the software.</string>
</resources>
